--- a/sql-query/01-05-2019.md
+++ b/sql-query/01-05-2019.md
@@ -11,15 +11,12 @@ WHERE
   SQLDATE>=20150201
   AND SQLDATE<=20181231
   AND ActionGeo_CountryCode='GTM'
-  AND EventCode IN ('190',
-    '191',
+  AND EventCode IN ('181',
+    '1823',
     '192',
-    '193',
-    '194',
-    '195',
-    '1951',
-    '1952',
-    '196')
+    '01',
+    '10',
+    '14')
   AND IsRootEvent = 1
   AND ActionGeo_Lat IS NOT NULL
   AND ActionGeo_Long IS NOT NULL
@@ -28,3 +25,10 @@ GROUP BY
   ActionGeo_Lat,
   ActionGeo_Long
 ~~~
+
+Root code: 01: MAKE PUBLIC STATEMENT
+Root Code: 10: DEMAND
+Root Code: 14: PROTEST
+Specific code: 181: Abduct, hijack, or take hostage
+Specific code: 1823: Killed by physical assault
+Specific code: 192: Occupy Territory
