--- a/sql-query/01-05-2019.md
+++ b/sql-query/01-05-2019.md
@@ -32,3 +32,33 @@ Root Code: 14: PROTEST
 Specific code: 181: Abduct, hijack, or take hostage
 Specific code: 1823: Killed by physical assault
 Specific code: 192: Occupy Territory
+
+---
+### 2014 - 2015 
+~~~
+SELECT
+  MAX(ActionGeo_Lat) AS lat,
+  MAX(ActionGeo_Long) AS lng,
+  COUNT(*) AS count,
+  MAX(SOURCEURL) AS source,
+  GROUP_CONCAT(UNIQUE(EventCode)) AS codes
+FROM
+  [gdelt-bq:full.events] 
+WHERE
+  SQLDATE>=20140101
+  AND SQLDATE<=20150201
+  AND ActionGeo_CountryCode='GTM'
+  AND EventCode IN ('181',
+    '1823',
+    '192',
+    '01',
+    '10',
+    '14')
+  #AND IsRootEvent = 1
+  AND ActionGeo_Lat IS NOT NULL
+  AND ActionGeo_Long IS NOT NULL
+  AND QuadClass=4
+GROUP BY
+  ActionGeo_Lat,
+  ActionGeo_Long
+~~~
