--- a/sql-query/01-05-2019.md
+++ b/sql-query/01-05-2019.md
@@ -1,5 +1,5 @@
 [Query Link](https://console.cloud.google.com/bigquery?sq=955477384685:36861ee1fa7d44a3bb666726a4d12039) 
-| (gs://yap-s-s/gt_protest_MonthYear_2019_1979)
+| gs://gdelt_gt/gt_protest_MonthYear_2019_1979.csv 
 ~~~
 SELECT
   ActionGeo_CountryCode,
