--- a/sql-query/01-05-2019.md
+++ b/sql-query/01-05-2019.md
@@ -10,7 +10,8 @@ SELECT
 FROM
   [gdelt-bq:full.events]
 WHERE
-  ActionGeo_CountryCode='GT' AND EventRootCode='14'
+  ActionGeo_CountryCode='GT' #https://www.gdeltproject.org/data/lookups/FIPS.country.txt
+  AND EventRootCode='14' #https://www.gdeltproject.org/data/lookups/CAMEO.eventcodes.txt
   GROUP BY
   ActionGeo_CountryCode,
   EventRootCode,
