--- a/sql-query/01-05-2019.md
+++ b/sql-query/01-05-2019.md
@@ -1,4 +1,4 @@
-[Query Link](https://console.cloud.google.com/bigquery?sq=955477384685:36861ee1fa7d44a3bb666726a4d12039) 
+[Query Link](https://console.cloud.google.com/bigquery?sq=955477384685:36861ee1fa7d44a3bb666726a4d12039) | [Google Sheets](https://docs.google.com/spreadsheets/d/1Lylhla7JWu3h22stZGp_wiEBTIJXf_YTs2quHPtrivc/edit#gid=1427330959)
 | gs://gdelt_gt/gt_protest_MonthYear_2019_1979.csv 
 ~~~
 SELECT
